# stress-strain_diagram_builder

./: CMakeLists.txt  README.md  dialogopenfile.cpp  dialogopenfile.h  dialogopenfile.ui  dialogsavedata.cpp  dialogsavedata.h  dialogsavedata.ui  dialogsaveplot.cpp  dialogsaveplot.h  dialogsaveplot.ui  infoprogram.cpp  infoprogram.h  infoprogram.ui  infplt.cpp  infplt.h  infplt.ui  infprg.cpp  infprg.h  infprg.ui  language_ru_RU.qm  language_ru_RU.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotwidget.cpp  plotwidget.h  plotwidget.ui  ssdb.pro  ssdb.pro.user.4d7236b.22  ssdb.qrc  ssdb.rc  tablewidget.cpp  tablewidget.h  tablewidget.ui
translations/: ssdb_Ru.qm  ssdb_Ru.ts
